# skill-arena

./: .gitignore  Makefile  PLAN.md  README.md  arena.py  backends.py  canary.py  forge.py  majority.py  precision.py  publish.py  pyproject.toml  report.py  scorers.py  screen.py
apps/: __init__.py  report_total_tdd.py  run_total_tdd.py  validate_app.py
apps/total-tdd-app/: README.md  defects.json
examples/inference-canary/: README.md  RECEIPT-2026-07-10.md  cases.jsonl  config.json
skill_arena.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
skills/adversarial-review/: DESIGN.md  cases.jsonl  config.json
skills/caveman/: DESIGN.md  SKILL.md  build_cases.py  cases.jsonl  config.json
skills/code-review/: DESIGN.md  build_cases.py  cases.jsonl  config.json
skills/csv-analysis/: DESIGN.md  SKILL.md  build_cases.py  cases.jsonl  config.json  receipt.py  verify_gold.py
skills/frontier-stewardship/: cases.jsonl  config.json
skills/goal-spec/: DESIGN.md  SKILL.md  build_cases.py  cases.jsonl  config.json
skills/highsignal/: config.json
skills/instruction-conflicts/: DESIGN.md  RECEIPT-2026-07-12.md  SKILL.md  build_cases.py  cases.jsonl  (+1 more)
tests/: test_backends.py  test_canary.py  test_csv_analysis.py  test_forge.py  test_frontier_stewardship_cases.py  test_loader.py  test_new_skill_cases.py  test_precision.py  test_publish.py  test_scorers.py  test_total_tdd_app_eval.py  test_total_tdd_apps.py
traj/: README.md  RECEIPT-2026-07-09.md  __init__.py  common.py  conftest.py  report.py  run_benchmark.py  scorers.py  validate_tasks.py
(+140 files in other folders)
