[project]
name = "skill-arena"
version = "0.1.0"
description = "Local skill evaluation arena."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
arena = "arena:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["arena", "backends", "scorers", "report", "forge", "canary"]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
